Finish chapter 2 and chapter 3

--- a/biblio.bib
+++ b/biblio.bib
@@ -900,3 +900,61 @@
   title = {Human protein-protein interaction prediction by a novel sequence-based co-evolution method: co-evolutionary divergence},
   journal = {Bioinformatics}
 }
+@article{Erdos_1959,
+  title={On Random Graphs, I},
+  author={Erdos, Paul and Renyi, Alfred},
+  journal={Publicationes mathematicae},
+  volume={6},
+  pages={290--297},
+  year={1959}
+}
+@article{Watts_1998,
+  title={Collective dynamics of ‘small-world’networks},
+  author={Watts, Duncan J and Strogatz, Steven H},
+  journal={nature},
+  volume={393},
+  number={6684},
+  pages={440--442},
+  year={1998},
+  publisher={Nature Publishing Group}
+}
+@article{Barabasi_1999,
+  title={Emergence of scaling in random networks},
+  author={Barab{\'a}si, Albert-L{\'a}szl{\'o} and Albert, R{\'e}ka},
+  journal={science},
+  volume={286},
+  number={5439},
+  pages={509--512},
+  year={1999},
+  publisher={American Association for the Advancement of Science}
+}
+@article{Merton_1968,
+  title={The Matthew effect in science},
+  author={Merton, Robert K},
+  journal={Science},
+  volume={159},
+  number={3810},
+  pages={56--63},
+  year={1968},
+  publisher={Washington}
+}
+@article{Molloy_1995,
+  title={A critical point for random graphs with a given degree sequence},
+  author={Molloy, Michael and Reed, Bruce},
+  journal={Random structures \& algorithms},
+  volume={6},
+  number={2-3},
+  pages={161--180},
+  year={1995},
+  publisher={Wiley Online Library}
+}
+@inproceedings{Bettstetter_2002,
+  title={On the minimum node degree and connectivity of a wireless multihop network},
+  author={Bettstetter, Christian},
+  booktitle={Proceedings of the 3rd ACM international symposium on Mobile ad hoc networking \& computing},
+  pages={80--91},
+  year={2002},
+  organization={ACM}
+}
+
+
