--- a/chapter3.tex
+++ b/chapter3.tex
@@ -101,7 +101,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 ($C_\beta$)
 ، ستون اسیدآمینه\پانوشت{backbone} ($BB$)، زنجیره جانبی ($SC$)، تمام اتم‌ها ($ALL$) و ترکیبات مختلف آن‌ها (مثل $C_\alpha+C_\beta$)، برای تعیین موقعیت اسید‌های آمینه استفاده شده‌اند. همچنین فواصل اتصال مختلفی بین ۴ تا ۱۶ آنگسترم در بین مقالات دیده می‌شود\جستار{Filippis_2012}.
 
-از بین تمام حالات ممکن، ما هشت حالت مدل‌سازی پروتئین‌ها در قالب گراف که بیشترین تکرار بین مقالات داشته‌اند را روی دو پایگاه‌داده ENZYME و DD پیاده می‌کنیم. این حالات به ترتیب شامل در نظر گرفتن اتم کربن آلفا با فاصله ۸ آنگسترم، تمام اتم‌ها با فاصله ۵ آنگسترم، اتم کربن بتا با فاصله ۸ آنگسترم، تمام اتم‌ها با فاصله ۴.۵ آنگسترم، اتم کربن آلفا با فاصله ۸.۵ آنگسترم، تمام اتم‌ها با فاصله ۶ آنگسترم، و اتم کربن آلفا با فاصله ۷ و ۶ آنگسترم هستند که در شکل \ارجا{fig:rig-occurance} به ترتیب میزان تکرار در مقالات نمایش داده شده‌اند (بخش ۲.۳.۴ از \جستار{Filippis_2012} را ببینید).
+از بین تمام حالات ممکن، ما هشت حالت مدل‌سازی پروتئین‌ها در قالب گراف که بیشترین تکرار بین مقالات داشته‌اند را روی دو پایگاه‌داده ENZYME و DD پیاده کردیم. این حالات به ترتیب شامل در نظر گرفتن اتم کربن آلفا با فاصله ۸ آنگسترم، تمام اتم‌ها با فاصله ۵ آنگسترم، اتم کربن بتا با فاصله ۸ آنگسترم، تمام اتم‌ها با فاصله ۴.۵ آنگسترم، اتم کربن آلفا با فاصله ۸.۵ آنگسترم، تمام اتم‌ها با فاصله ۶ آنگسترم، و اتم کربن آلفا با فاصله ۷ و ۶ آنگسترم هستند که در شکل \ارجا{fig:rig-occurance} به ترتیب میزان تکرار در مقالات نمایش داده شده‌اند (بخش ۲.۳.۴ از \جستار{Filippis_2012} را ببینید). میزان دقت گرافلت کرنل گاوسی روی هر کدام از مدل‌ها در جدول \ارجا{tab:ggk-on-rigs} نمایش داده شده‌است. از بین تمام مدل‌ها، انتخاب اتم کربن آلفا با فاصله ۶ آنگسترم بهترین پاسخ را دارد.
 
 \begin{figure}[ht]
 \center{
@@ -110,6 +110,26 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 \caption{پر کاربرد‌ترین اتم‌ها و فواصل برای تبدیل پروتئین به گراف در بین ۲۰۰ مقاله. استخراج شده از \جستار{Filippis_2012}}
 \label{fig:rig-occurance}
 \end{figure}
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{| c | c | c | c |}
+    \hline
+    ردیف & اتم & فاصله & دقت روی پایگاه DD \\ \hline
+۱ & کربن آلفا & ۸ & ۷۷\% \\ \hline
+۲ & تمام اتم‌ها & ۵ & ۷۲\% \\ \hline
+۳ & کربن بتا & ۸ & ۷۵\% \\ \hline
+۴ & تمام اتم‌ها & ۴.۵ & ۷۵\% \\ \hline
+۵ & کربن آلفا & ۸.۵ & ۷۷\% \\ \hline
+۶ & تمام اتم‌ها & ۶ & ۷۰\% \\ \hline
+۷ & کربن آلفا & ۷ & ۷۶\% \\ \hline
+۸ & کربن آلفا & ۶ & ۸۰\% \\ \hline
+\end{tabular}
+\caption{
+عملکرد گرافلت کرنل گاوسی روی مدل‌های مختلف تبدیل پروتئین به گراف برای پایگاه داده DD .
+}
+\label{tab:ggk-on-rigs}
+\end{table}
 
 \subsection{مقایسه گرافلت کرنل گاوسی و گرافلت کرنل}
 در این بخش به مقایسه گرافلت‌کرنل گاوسی (GGK) و گرافلت کرنل (GK) ارائه شده توسط شرواشیتز\جستار{Shervashidze_2009} می‌پردازیم. همانطور که قبلاً ذکر شد، \متن‌لاتین{GK} حاصل ضرب‌داخلی بردار زیرگراف‌های کوچک پروتئین‌هاست. اگرچه نویسنده به این بردار، نام \خمیده{بردار گرافلت} را داده‌است، اما باید توجه داشت که در این کرنل، هر زیرگراف کوچک اعم از القایی یا غیر القایی، همبند یا ناهمبند، گرافلت تلقی می‌شود. به دلیل کُند بودن شمارش تمام زیرگراف‌های همبند یا ناهمبند، تعداد آن‌ها توسط یک تکنیک نمونه‌برداری تخمین زده می‌شود. شکل \ارجا{fig:gk-ggk-accuracy} دقت دسته‌بندی انواع مختلف GK را در مقابل GGK برای دو پایگاه‌داده DD و ENZYMES نمایش می‌دهد. در این شکل، \متن‌لاتین{\خمیده{A}} به معنی شمارش تمام زیرگراف‌های همبند و ناهمبند و \متن‌لاتین{\خمیده{C}} به معنی شمارش زیرگراف‌های فقط همبند است. عددی که بلافاصله بعد از \متن‌لاتین{\خمیده{A}} و \متن‌لاتین{\خمیده{C}} آمده است، اندازه زیرگراف‌های شمارش شده را نشان می‌دهد. اعداد ۲۰۰۰، ۴۰۰۰ و ۸۰۰۰ تعداد نمونه‌ها برای تخمین بردارهای گرافلتی است.
@@ -163,7 +183,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 امکان اجرای برخی از کرنل‌ها بر روی پایگاه داده DD وجود نداشت. کرنل ویسفیلر-لیمن یالی، نیاز به حافظه زیادی دارد که بر روی سیستم با ۴ گیگابایت رم قابل اجرا نبود. هرچند امکان اجرای این کرنل بر روی یک سیستم با حافظه بالاتر وجود دارد، اما در صورت استفاده از یک پایگاه داده بزرگتر، بازهم با این مشکل روبرو خواهیم شد و نمی‌توان از این مسئله به سادگی عبور کرد. برای کرنل کوتاه‌ترین مسیر نیز چنین اتفاقی رخ می‌دهد و بعد از اجرا، کرنل به سرعت فضای موجود را اشغال کرده و با کمبود فضا مواجه می‌شود. اجرای دو کرنل گشت تصادفی و ویسفلر-لیمن کوتاه‌ترین مسیر، بیش از یک روز به طول انجامید بنابراین از ادامه کار آن‌ها جلوگیری شد زیرا مقایسه در این حالت معنای خاصی نداشت.
 
 
-\begin{table}[t]
+\begin{table}[ht]
 \centering
 \begin{tabular}{|c|c|c|}
     \hline
@@ -181,7 +201,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 \label{tab:ggk-vs-others}
 \end{table}
 
-\begin{table}[t]
+\begin{table}[ht]
 \centering
 \begin{tabular}{|c|c|c|}
     \hline
