Finish data section in chapter 4

--- a/biblio.bib
+++ b/biblio.bib
@@ -956,5 +956,28 @@
   year={2002},
   organization={ACM}
 }
-
+@article{Smialowski_2010,
+  title={The Negatome database: a reference set of non-interacting protein pairs},
+  author={Smialowski, Pawel and Pagel, Philipp and Wong, Philip and Brauner, Barbara and Dunger, Irmtraud and Fobo, Gisela and Frishman, Goar and Montrone, Corinna and Rattei, Thomas and Frishman, Dmitrij and others},
+  journal={Nucleic acids research},
+  volume={38},
+  number={suppl 1},
+  pages={D540--D544},
+  year={2010},
+  publisher={Oxford Univ Press}
+}
+@article{Veres_2014, 
+    title={ComPPI: a cellular compartment-specific database for protein-protein interaction network analysis},
+    ISSN={1362-4962},
+    url={http://dx.doi.org/10.1093/nar/gku1007},
+    DOI={10.1093/nar/gku1007},
+    journal={Nucleic Acids Research},
+    publisher={Oxford University Press (OUP)},
+    author={Veres, D. V. and Gyurko, D. M. and Thaler, B. and Szalay, K. Z. and Fazekas, D. and Korcsmaros, T. and Csermely, P.},
+    year={2015},
+    month={Jan},
+    volume={43},
+    number={1},
+    pages={D485-D493}
+}
 
