--- a/commands.tex
+++ b/commands.tex
@@ -90,6 +90,7 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 \newcommand{\ارجا}[1]{\ref{#1}}
 \renewcommand{\درشت}[1]{\textbf{#1}}
 \newcommand{\خمیده}[1]{\textit{#1}}
+\newcommand{\سه‌نقطه}{\ldots}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\گراف}[1]{$#1 = (V,E)$}
 \newcommand{\graph}[3]{\ensuremath{#1 = (#2,#3)}}
