Before adding results

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -94,7 +94,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 \label{tab:dataset-statistics}
 \end{table}
 
-\subsection{تبدیل پروتئین به گراف}
+\subsection{تبدیل پروتئین به گراف}\label{sec:protein-to-graph}
 طبیعی است که برای استفاده از یک گراف کرنل روی پروتئین‌ها، ابتدا باید آن‌ها را به صورت گراف مدل کرد. به همین منظور، معمولاً اسید‌های آمینه را به عنوان رئوس گراف در نظر می‌گیرند. بین هر دو رأس یال خواهد بود اگر اسیدهای آمینه متناظر حداکثر به فاصله تعریف شده $d$ از یکدیگر قرار گرفته باشند. به این فاصله، فاصله اتصال\پانوشت{\متن‌لاتین{contact distance}} می‌گوییم. برای اندازه‌گیری این فاصله، باید موقعیت هر اسیدآمینه در فضای سه بعدی را تعیین کرد. اما همانطور که در بخش \ارجا{sec:protein-structure} به آن اشاره شد، هر اسیدآمینه از چند اتم ساخته شده است. اینکه موقعیت اسیدآمینه توسط کدام اتم تعیین شود و فاصله اتصال چقدر باشد، موضوعی چالش برانگیز در تحقیقات بوده است. در بین مقالات مختلف، کربن آلفا 
 ($C_\alpha$)
 ، کربن بتا
