--- a/chapter4.tex
+++ b/chapter4.tex
@@ -58,10 +58,13 @@ k((p_i,p_j),(p_u,p_v)) = k_{GGK}(p_i,p_u) + k_{GGK}(p_j,p_v)
 
 برای جمع آوری داده‌های مثبت، از پایگاه‌های \متن‌لاتین{DIP}، \متن‌لاتین{IntAct} و \متن‌لاتین{BioGrid} استفاده کرده و 20454 تعامل بین 6811 پروتئین گونه انسانی را در قالب شماره دسترسی \متن‌لاتین{UniProt} از بین تعاملاتی که حداقل دوبار در مقالات دیده شده بودند، استخراج نمودیم. از بین این تعاملات، آن‌هایی که حداقل یکی از پروتئین‌هایشان بدون ساختار سوم مشخص بودند، حذف شدند. در نتیجه، تعداد 9403 تعامل بین 2697 پروتئین با ساختار سوم مشخص باقی ماند. برای هر شماره دسترسی \متن‌لاتین{Uniprot}، ممکن است بیش از یک ساختار سوم با شناسه \متن‌لاتین{PDB} مشخص شده باشد. در این صورت ما ساختار سومی را که بیشترین دقت (کمترین \متن‌لاتین{resolution}) را داشت، انتخاب کرده و در قالب فایل \متن‌لاتین{PDB} از پایگاه \متن‌لاتین{RCSB} دریافت کردیم.
 
-برای تشکیل داده‌های منفی، دوتایی‌های موجود در پایگاه \متن‌لاتین{Negatome} بین ۲۶۹۷ پروتئین انتخاب شده در مرحله قبل را بازیابی کردیم. از این راه، ۶۸۷ دوتایی بدست آمد. برای ایجاد تعادل بین تعداد داده‌های مثبت و منفی، 10716 دوتایی دیگر بین پروتئین‌های انتخاب شده که در واحد سلولی متفاوتی بودند از پایگاه \متن‌لاتین{ComPPI} استخراج شد که تعداد داده‌های منفی را جمعاً به ۱۱۴۰۳ دوتایی رساند.
+برای تشکیل مجموعه داده‌های منفی، دوتایی‌های موجود در پایگاه \متن‌لاتین{Negatome} بین ۲۶۹۷ پروتئین انتخاب شده در مرحله قبل را بازیابی کردیم. از این راه، ۶۸۷ دوتایی بدست آمد. برای ایجاد تعادل بین تعداد داده‌های مثبت و منفی، 10716 دوتایی دیگر بین پروتئین‌های انتخاب شده که در واحد سلولی متفاوتی بودند از پایگاه \متن‌لاتین{ComPPI} استخراج شد که تعداد داده‌های منفی را جمعاً به ۱۱۴۰۳ دوتایی رساند.
 
-\section{ساخت گراف از سطوح در دسترس پروتئین}
-\section{نحوه یادگیری ماشین}
+در مجموع، ۲۰۸۰۶ دوتایی بین ۲۶۹۷ پروتئین برای سنجش میزان دقت روش پیشنهادی گردآوری شد. هر پروتئین، به صورت گراف با در نظر گرفتن موقعیت اتم کربن آلفا و فاصله ۶ آنگسترم مطابق بخش \ارجا{sec:protein-to-graph} مدل سازی گردید.
+
 \section{شرایط آزمون}
-\section{بررسی نتایج}
+مشابه فصل قبل، برای آزمون روش پیشنهادی از زبان برنامه نویسی \متن‌لاتین{C++} جهت پیاده‌سازی کرنل‌ و از زبان \متن‌لاتین{R} به منظور یادگیری روی ماشین \متن‌لاتین{C-SVM} و تحلیل داده‌ها استفاده کردیم. آزمون در قالب \متن‌لاتین{10-fold cross validation}، ده بار تکرار شد.
+
+\section{بررسی نتایج و مقایسه}
+
 \section{جمع‌بندی}
